@@ -40,6 +40,7 @@ CInventoryRequest::~CInventoryRequest()
 {
 	delete m_pTheDB;
 	delete m_pState;
+	delete m_pPluginState;
 	delete m_pSysInfo;
 }
 
@@ -83,6 +84,7 @@ BOOL CInventoryRequest::initInventory()
 
 	m_pTheDB	= new CXMLInteract(&m_cmXml);
 	m_pState	= new COCSInventoryState;
+	m_pPluginState	= new COCSInventoryState;
 	m_pSysInfo	= new CSysInfo( getAgentConfig()->isDebugRequired() >= OCS_DEBUG_MODE_TRACE, getDataFolder());
 
 	m_Device.SetDeviceName( m_pDeviceid->getComputerName());
@@ -101,8 +103,10 @@ BOOL CInventoryRequest::initInventory()
 	// Read last inventory state from XML file
 	m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Reading last inventory state"));
 	csStateFile.Format( _T("%s\\%s"), getDataFolder(), OCS_LAST_STATE_FILE);
-	if (!m_pState->ReadFromFile( csStateFile))
-		m_pLogger->log( LOG_PRIORITY_WARNING, _T( "INVENTORY => Failed to load/parse state file <%s>"), csStateFile);
+	if (!m_pState->ReadFromFile( csStateFile, OCS_STATE_STANDARD_SECTION))
+		m_pLogger->log( LOG_PRIORITY_WARNING, _T( "INVENTORY => Failed to load/parse inventory state from file <%s>"), csStateFile);
+	if (!m_pPluginState->ReadFromFile( csStateFile, OCS_STATE_PLUGIN_SECTION))
+		m_pLogger->log( LOG_PRIORITY_WARNING, _T( "INVENTORY => Failed to load/parse plugin state from file <%s>"), csStateFile);
 	return TRUE;
 }
 
@@ -126,7 +130,6 @@ BOOL CInventoryRequest::final()
 	else
 	{
 		// Standard inventory => Send full inventory information
-		getXmlPointerContent();
 		// Check state to see if there is something changed
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Checking last inventory state"));
 		if (isStateChanged())
@@ -135,6 +138,7 @@ BOOL CInventoryRequest::final()
 			m_pLogger->log( LOG_PRIORITY_NOTICE, _T( "INVENTORY => No change since last inventory"));
 
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Generating XML document with Device properties"));
+		getXmlPointerContent();
 		// Update BIOS file
 		bSuccess = bSuccess && m_pTheDB->UpdateBIOS( m_BIOS);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => XML Update BIOS"));
@@ -210,9 +214,14 @@ BOOL CInventoryRequest::writeLastInventoryState()
 	m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Writing new inventory state"));
 	CString csFileName;
 	csFileName.Format( _T( "%s\\%s"), getDataFolder(), OCS_LAST_STATE_FILE);
-	if (!m_pState->WriteToFile( csFileName))
+	if (!m_pState->WriteToFile( csFileName, OCS_STATE_STANDARD_SECTION))
 	{
 		m_pLogger->log( LOG_PRIORITY_WARNING, _T( "INVENTORY => Failed to write new inventory state to file <%s>"), csFileName);
+		return FALSE;
+	}
+	if (!m_pPluginState->WriteToFile( csFileName, OCS_STATE_PLUGIN_SECTION))
+	{
+		m_pLogger->log( LOG_PRIORITY_WARNING, _T( "INVENTORY => Failed to write new plugin state to file <%s>"), csFileName);
 		return FALSE;
 	}
 	return TRUE;
@@ -226,161 +235,332 @@ void CInventoryRequest::setTag(CString csTag)
 
 BOOL CInventoryRequest::isStateChanged()
 {
-	CString	csBuffer;
-	ULONG	ulChecksum = 0;
+	CString				csHash, csPlugHash;
+	ULONG				ulChecksum = 0;
+	// BIOS informations from EXE/VBS plugin
+	CBios				m_plugBIOS;
+	// List of CPU infos from EXE/VBS plugin
+	CCpuList			m_plugCpuList;
+	// List of Input devices infos from EXE/VBS plugin
+	CInputDeviceList	m_plugInputList;
+	// List of Logical Drives (Volum name, File system, Total size, Free space...) from EXE/VBS plugin
+	CLogicalDriveList	m_plugDriveList;
+	// List of Memory slots from EXE/VBS plugin
+	CMemorySlotList		m_plugMemoryList;
+	// List of Modems from EXE/VBS plugin
+	CModemList			m_plugModemList;
+	// List of Monitors from EXE/VBS plugin
+	CMonitorList		m_plugMonitorList;
+	// List of Network adapters from EXE/VBS plugin
+	CNetworkAdapterList m_plugNetworkList;
+	// List of Printers from EXE/VBS plugin
+	CPrinterList		m_plugPrinterList;
+	// List of Device registry values infos from EXE/VBS plugin
+	CRegistryValueList	m_plugRegistryList;
+	// List of Software from EXE/VBS plugin
+	CSoftwareList		m_plugSoftwareList;
+	// List of Sound Devices from EXE/VBS plugin
+	CSoundDeviceList	m_plugSoundList;
+	// List of Storage devices (Floppy disk, IDE Disk, SCSI Disk, CD-Rom...) from EXE/VBS plugin
+	CStoragePeripheralList m_plugStorageList;
+	// List of System Controlers (Floppy, IDE, SCSI, USB, IEEE1394, PCMCIA, SATA) from EXE/VBS plugin
+	CSystemControllerList m_plugSystemControllerList;
+	// List of System Slots (PCI, AGP...) from EXE/VBS plugin
+	CSystemSlotList		m_plugSlotList;
+	// List of ports from EXE/VBS plugin
+	CSystemPortList		m_plugPortList;
+	// List of Video adapters from EXE/VBS plugin
+	CVideoAdapterList	m_plugVideoList;
 
 	// Checking if hardware changes
-	csBuffer = m_Device.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetHardware()) != 0)
+	csHash = m_Device.GetHash();
+	if (csHash.CompareNoCase( m_pState->GetHardware()) != 0)
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_HARDWARE;
-		m_pState->SetHardware( csBuffer);
+		m_pState->SetHardware( csHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Hardware inventory state changed"));
 	}
 	// Checking if bios changes
-	csBuffer = m_BIOS.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetBios()) != 0)
+	csHash = m_BIOS.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadBIOS( m_plugBIOS))
+		csPlugHash = m_plugBIOS.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetBios()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetBios()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_BIOS;
-		m_pState->SetBios( csBuffer);
+		m_pState->SetBios( csHash);
+		m_pPluginState->SetBios( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Bios inventory state changed"));
 	}
 	// Checking if memories changes
-	csBuffer = m_MemoryList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetMemories()) != 0)
+	csHash = m_MemoryList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadMemorySlots( m_plugMemoryList))
+		csPlugHash = m_plugMemoryList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetMemories()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetMemories()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_MEMORIES;
-		m_pState->SetMemories( csBuffer);
+		m_pState->SetMemories( csHash);
+		m_pPluginState->SetMemories( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Memory slots inventory state changed"));
 	}
 	// Checking if slots changes
-	csBuffer = m_SlotList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetSlots()) != 0)
+	csHash = m_SlotList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadSystemSlots( m_plugSlotList))
+		csPlugHash = m_plugSlotList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetSlots()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetSlots()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_SLOTS;
-		m_pState->SetSlots( csBuffer);
+		m_pState->SetSlots( csHash);
+		m_pPluginState->SetSlots( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => System slots inventory state changed"));
 	}
 	// Checking if registry changes
-	csBuffer = m_RegistryList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetRegistry()) != 0)
+	csHash = m_RegistryList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadRegistryValues( m_plugRegistryList))
+		csPlugHash = m_plugRegistryList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetRegistry()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetRegistry()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_REGISTRY;
-		m_pState->SetRegistry( csBuffer);
+		m_pState->SetRegistry( csHash);
+		m_pPluginState->SetRegistry( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Registry inventory state changed"));
 	}
 	// Checking if controllers changes
-	csBuffer = m_SystemControllerList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetControllers()) != 0)
+	csHash = m_SystemControllerList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadSystemControllers( m_plugSystemControllerList))
+		csPlugHash = m_plugSystemControllerList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetControllers()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetControllers()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_CONTROLLERS;
-		m_pState->SetControllers( csBuffer);
+		m_pState->SetControllers( csHash);
+		m_pPluginState->SetControllers( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => System controllers inventory state changed"));
 	}
 	// Checking if monitors changes
-	csBuffer = m_MonitorList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetMonitors()) != 0)
+	csHash = m_MonitorList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadMonitors( m_plugMonitorList))
+		csPlugHash = m_plugMonitorList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetMonitors()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetMonitors()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_MONITORS;
-		m_pState->SetMonitors( csBuffer);
+		m_pState->SetMonitors( csHash);
+		m_pPluginState->SetMonitors( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Monitors inventory state changed"));
 	}
 	// Checking if ports changes
-	csBuffer = m_PortList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetPorts()) != 0)
+	csHash = m_PortList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadSystemPorts( m_plugPortList))
+		csPlugHash = m_plugPortList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetPorts()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetPorts()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_PORTS;
-		m_pState->SetPorts( csBuffer);
+		m_pState->SetPorts( csHash);
+		m_pPluginState->SetPorts( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => System ports inventory state changed"));
 	}
 	// Checking if storages changes
-	csBuffer = m_StorageList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetStorages()) != 0)
+	csHash = m_StorageList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadStorages( m_plugStorageList))
+		csPlugHash = m_plugStorageList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetStorages()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetStorages()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_STORAGES;
-		m_pState->SetStorages( csBuffer);
+		m_pState->SetStorages( csHash);
+		m_pPluginState->SetStorages( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Storage peripherals inventory state changed"));
 	}
 	// Checking if drives changes
-	csBuffer = m_DriveList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetDrives()) != 0)
+	csHash = m_DriveList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadDrives( m_plugDriveList))
+		csPlugHash = m_plugDriveList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetDrives()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetDrives()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_DRIVES;
-		m_pState->SetDrives( csBuffer);
+		m_pState->SetDrives( csHash);
+		m_pPluginState->SetDrives( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Logical drives inventory state changed"));
 	}
 	// Checking if inputs changes
-	csBuffer = m_InputList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetInputs()) != 0)
+	csHash = m_InputList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadInputDevices( m_plugInputList))
+		csPlugHash = m_plugInputList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetInputs()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetInputs()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_INPUTS;
-		m_pState->SetInputs( csBuffer);
+		m_pState->SetInputs( csHash);
+		m_pPluginState->SetInputs( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Input peripherals inventory state changed"));
 	}
 	// Checking if modems changes
-	csBuffer = m_ModemList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetModems()) != 0)
+	csHash = m_ModemList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadModems( m_plugModemList))
+		csPlugHash = m_plugModemList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetModems()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetModems()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_MODEMS;
-		m_pState->SetModems( csBuffer);
+		m_pState->SetModems( csHash);
+		m_pPluginState->SetModems( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Modems inventory state changed"));
 	}
 	// Checking if networks changes
-	csBuffer = m_NetworkList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetNetworks()) != 0)
+	csHash = m_NetworkList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadNetworks( m_plugNetworkList))
+		csPlugHash = m_plugNetworkList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetNetworks()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetNetworks()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_NETWORKS;
-		m_pState->SetNetworks( csBuffer);
+		m_pState->SetNetworks( csHash);
+		m_pPluginState->SetNetworks( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Network adapters inventory state changed"));
 	}
 	// Checking if printers changes
-	csBuffer = m_PrinterList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetPrinters()) != 0)
+	csHash = m_PrinterList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadPrinters( m_plugPrinterList))
+		csPlugHash = m_plugPrinterList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetPrinters()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetPrinters()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_PRINTERS;
-		m_pState->SetPrinters( csBuffer);
+		m_pState->SetPrinters( csHash);
+		m_pPluginState->SetPrinters( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Printers inventory state changed"));
 	}
 	// Checking if sounds changes
-	csBuffer = m_SoundList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetSounds()) != 0)
+	csHash = m_SoundList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadSounds( m_plugSoundList))
+		csPlugHash = m_plugSoundList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetSounds()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetSounds()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_SOUNDS;
-		m_pState->SetSounds( csBuffer);
+		m_pState->SetSounds( csHash);
+		m_pPluginState->SetSounds( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Sound adapters inventory state changed"));
 	}
 	// Checking if videos changes
-	csBuffer = m_VideoList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetVideos()) != 0)
+	csHash = m_VideoList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadVideos( m_plugVideoList))
+		csPlugHash = m_plugVideoList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetVideos()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetVideos()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_VIDEOS;
-		m_pState->SetVideos( csBuffer);
+		m_pState->SetVideos( csHash);
+		m_pPluginState->SetVideos( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Video adapters inventory state changed"));
 	}
 	// Checking if softwares changes
-	csBuffer = m_SoftwareList.GetHash();
-	if (csBuffer.CompareNoCase( m_pState->GetSoftwares()) != 0)
+	csHash = m_SoftwareList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadSoftwares( m_plugSoftwareList))
+		csPlugHash = m_plugSoftwareList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetSoftwares()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetSoftwares()) != 0))
 	{
 		// Changed
 		ulChecksum += OCS_CHECKSUM_SOFTWARES;
-		m_pState->SetSoftwares( csBuffer);
+		m_pState->SetSoftwares( csHash);
+		m_pPluginState->SetSoftwares( csPlugHash);
 		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => Software inventory state changed"));
+	}
+	// Checking if installed Virtual Machines changes
+	csHash.Empty();
+	if (csHash.CompareNoCase( m_pState->GetVirtualMachines()) != 0)
+	{
+		// Changed
+		ulChecksum += OCS_CHECKSUM_VIRTUALMACHINES;
+		m_pState->SetVirtualMachines( csHash);
+		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => installed Virtual Machines inventory state changed"));
+	}
+	// Checking if CPUs changes
+	csHash = m_CpuList.GetHash();
+	getXmlPointerContent();
+	if (m_pTheDB->ReadCPUs( m_plugCpuList))
+		csPlugHash = m_plugCpuList.GetHash();
+	else
+		csPlugHash.Empty();
+	if ((csHash.CompareNoCase( m_pState->GetCPUs()) != 0) ||
+		(csPlugHash.CompareNoCase( m_pPluginState->GetCPUs()) != 0))
+	{
+		// Changed
+		ulChecksum += OCS_CHECKSUM_CPUS;
+		m_pState->SetCPUs( csHash);
+		m_pPluginState->SetCPUs( csPlugHash);
+		m_pLogger->log( LOG_PRIORITY_DEBUG, _T( "INVENTORY => CPU inventory state changed"));
 	}
 	m_Device.SetChecksum( ulChecksum);
 	// if change
